test/rewriter/errors/expr_anti_quotation_payload.expected
File "expr_anti_quotation_payload.ml", line 1, characters 38-45:
1 | let bad_anti_quote_payload = [%yojson [%y? _]]
                                          ^^^^^^^
Error: ppx_yojson: bad antiquotation payload, should be a single expression
